--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,20 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-lt-terminal-mono: 'LT Terminal Mono', monospace;
+}
+
+@font-face {
+  font-family: 'LT Terminal Mono';
+  src: url('/fonts/LT-Terminal-Mono-Font.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+a,p,h1,h2,h3,h4,h5,h6 {
+  font-family: var(--font-lt-terminal-mono);
 }
 
 @theme inline {
@@ -10,6 +24,13 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-serif: var(--font-geist-serif);
+  --animate-blink: blink 200ms step-start infinite;
+
+  @keyframes blink {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0; }
+  }
 }
 
 @media (prefers-color-scheme: dark) {
